--- a/Datarun Premium with 5 metrics copy 1/.project
+++ b/Datarun Premium with 5 metrics copy 1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Datarun Premium with 5 metrics copy 1</name>
+	<name>DR5c1</name>
 	<comment></comment>
 	<projects>
 	</projects>
